# summarize-youtube-video

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/summarize_youtube/: llama_server_manager.py  main.py  summarizer.py
