[project]
name = "summarize-youtube-video"
version = "0.1.0"
description = "Récupère un transcript propre d'une vidéo YouTube + résumé intelligent avec Gemma-4 12B (llama.cpp)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "youtube-clean-transcript",
    "requests",
    "yt-dlp",
]

[project.scripts]
summarize-yt = "summarize_youtube.main:main"
