[project]
name = "summarize-youtube-video"
version = "2.0.0"
description = "Fetch clean YouTube transcripts and generate local AI summaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "summarize-me-this-text>=0.2.0",
]

[project.scripts]
rezmyt = "summarize_youtube.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
